2011-08-12  Abhishek Arya  <inferno@chromium.org>

        Crash in WebCore::editingIgnoresContent
        https://bugs.webkit.org/show_bug.cgi?id=66125

        Reviewed by Ryosuke Niwa.

        Tests that we do not crash when we blow away the root
        during the firing of selectstart event in selection.

        * editing/selection/select-start-remove-root-crash-expected.txt: Added.
        * editing/selection/select-start-remove-root-crash.html: Added.

2011-08-13  Abhishek Arya  <inferno@chromium.org>

        Crash in HTMLTreeBuilder::processAnyOtherEndTagForInBody.
        https://bugs.webkit.org/show_bug.cgi?id=66187

        Reviewed by Adam Barth.

        * fast/html/process-end-tag-for-inbody-crash-expected.txt: Added.
        * fast/html/process-end-tag-for-inbody-crash.html: Added.

2011-08-10  Abhishek Arya  <inferno@chromium.org>

        Tests that we do not crash when trying to access a removed
        m_originatingLine for a float.
        https://bugs.webkit.org/show_bug.cgi?id=65938

        Reviewed by Dave Hyatt.

        * fast/block/float/float-originating-line-deleted-crash-expected.txt: Added.
        * fast/block/float/float-originating-line-deleted-crash.html: Added.

2011-07-28  Abhishek Arya  <inferno@chromium.org>

        Regression(82144): Crash in TrailingObjects::updateMidpointsForTrailingBoxes
        https://bugs.webkit.org/show_bug.cgi?id=65137

        ASSERTION FAILED: trailingSpaceMidpoint >= 0

        Reviewed by Dave Hyatt.

        * fast/block/update-midpoints-for-trailing-boxes-crash-expected.txt: Added.
        * fast/block/update-midpoints-for-trailing-boxes-crash.html: Added.

2011-08-01  Jochen Eisinger  <jochen@chromium.org>

        Require explicit user action to override the policy URL on form submissions.
        https://bugs.webkit.org/show_bug.cgi?id=61809

        Reviewed by Adam Barth.

        * http/tests/loading/redirect-methods-expected.txt: