@@ -1,3 +1,14 @@
+2011-08-15  Gavin Barraclough  <barraclough@apple.com>
+
+        Crash accessing static property on sealed object
+        https://bugs.webkit.org/show_bug.cgi?id=66242
+
+        Reviewed by Sam Weinig.
+
+        * fast/js/preventExtensions-expected.txt:
+        * fast/js/script-tests/preventExtensions.js:
+            - added test case.
+
 2011-08-12  Abhishek Arya  <inferno@chromium.org>
 
         Crash in WebCore::editingIgnoresContent
